syntax = "proto3";

package com.zynga.runtime.protobuf.file;

import "event_plugin.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "test/no_events_test.proto";

option (com.zynga.runtime.protobuf.file_event_sourced) = true;

message TestBlob {
  Bar                bar           = 1;
  Foo                foo           = 2;
  map<int32, string> int_to_string = 3;
  map<string, Foo>   string_to_foo = 4;
  repeated int32     ilist         = 5;
  repeated string    slist         = 6;
  repeated Foo       foolist       = 7;

  oneof test {
    Foo maybefoo = 8;
    int32 maybeint = 9;
    string maybestring = 10;
    NoEvents no_events_a = 17;
    HasEvents has_events_a = 19;
  }

  Foo.Zam zam = 11;
  bool field_bool = 12;

  google.protobuf.Timestamp timestamp = 13;
  google.protobuf.Duration duration = 14;

  AllPrimitives all_prims = 15;

  TestBlob test_blob = 16;

  NoEvents no_events_b = 18;
}

message Foo {


  int64  long = 1;
  string str  = 2;
  Foo foo = 3;
  message Zam {
    int32 hi = 1;
  }

  Enumero enumero = 4;
  ok okay = 5;
  enum ok {
    HI = 0;
  }
}

enum Enumero {
  EMPTY = 0;
  SOMETHING = 1;
  HALP = 2;
}

message Bar {
  Foo foo = 1;
}

message AllPrimitives {
  uint32      a = 1;
  int32       b = 2;
  fixed64     c = 3;
  fixed32     d = 4;
  sfixed64    e = 5;
  sfixed32    f = 6;
  double      g = 7;
  float       h = 8;
  bool        i = 9;
  string      j = 10;
  bytes       k = 11;
  int64       l = 12;
  uint64      m = 13;
  sint32      n = 14;
  sint64      o = 15;
}

message RecursiveMap {
  map<int32, RecursiveMap> map = 1;
  AllPrimitives primitives = 2;
  Enumero enumero = 3;
  Bar bar = 4;
}

message RecursiveList {
  repeated RecursiveList list = 1;
  AllPrimitives primitives = 2;
  Enumero enumero = 3;
  Bar bar = 4;
}
